Fix for PrettyPhoto on mobile

--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -459,7 +459,7 @@ ul.nostyle i {
   color: #fff;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .portfolio-info {
     display: none;
   }
